first try after rework1

--- a/index.html
+++ b/index.html
@@ -130,13 +130,15 @@
      </a>
   </section>
   <footer class="footer">
-    <ul class="footer__links">
-      <li class="footer__list-el"><a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a></li>
-      <li class="footer__list-el"><a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a></li>
-      <li class="footer__list-el"><a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a></li>
-      <li class="footer__list-el"><a class="footer__link" target="_blank" href="https://calendar.yandex.ru">Календарь</a></li>
-      <li class="footer__list-el"><a class="footer__link" target="_blank" href="https://travel.yandex.ru">Путешествия</a></li>
-    </ul>
+    <nav class="footer__nav">
+      <ul class="footer__links">
+        <li class="footer__list-el"><a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a></li>
+        <li class="footer__list-el"><a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a></li>
+        <li class="footer__list-el"><a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a></li>
+        <li class="footer__list-el"><a class="footer__link" target="_blank" href="https://calendar.yandex.ru">Календарь</a></li>
+        <li class="footer__list-el"><a class="footer__link" target="_blank" href="https://travel.yandex.ru">Путешествия</a></li>
+      </ul>
+    </nav>
     <h2 class="footer__copyright">&copy; 2022. Ахмадиев Руслан</h2>
   </footer>
 </body>
