--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 </head>
 <body class="page">
   <header class="header">
-     <img class="header__logo" src="./images/header-logo.svg" alt="Миниатюра России">
+    <img class="header__logo" src="./images/header-logo.svg" alt="Миниатюра России">
       <ul class="header__links">
         <li class="header__list-el"><a class="header__lang-link header__lang-link_selected" target="_blank" href="#">Ru</a></li>
         <li class="header__list-el"><a class="header__lang-link" target="_blank" href="#">En</a></li>
-      </div>
-    </div>
+      </ul>
   </header>
   <main class="content">
     <section class="lead">
-      <h1 class="lead__title">Путешествие по&nbsp;России</h1>
+      <h1 class="lead__title">Путешествия по&nbsp;России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img class="lead__image" src="./images/lead-polka.jpg" alt="Карта длинного маршрута по России на фоне бокового места плацкарта">
       <p class="lead__caption">ваша полка &mdash; верхняя</p> 
@@ -106,7 +105,9 @@
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
           в мире. Многие также знают, что это самый большой источник пресной воды и одно 
           из красивейших мест в России.</p>
-          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
+          Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость
+          на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
       </article>
       <article class="place">
@@ -117,15 +118,20 @@
           <a class="place__link" target="_blank" href="http://vodlozero.ru">http://vodlozero.ru/</a>
         </div>
         <div class="place__paragraphs">
-          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. 
+          Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам 
+          уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню 
+          километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div> 
       </article>
     </section>
     <section class="cover">
       <a class="cover__link" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <div class="cover__background">
-          <h2 class="cover__title">До Байкала &laquo;на собаках&raquo;</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы до Байкала на электричках.</p>
+          <div class="cover__text-box">
+            <h2 class="cover__title">До Байкала &laquo;на собаках&raquo;</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы до Байкала на электричках.</p>
+          </div>
         </div>
       </a>
     </section>
