--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="Миниатюра России">
       <ul class="header__links">
-        <li class="header__list-el"><a class="header__lang-link header__lang-link_selected" target="_blank" href="#">Ru</a></li>
-        <li class="header__list-el"><a class="header__lang-link" target="_blank" href="#">En</a></li>
+        <li class="header__list-el"><a class="header__lang-link header__lang-link_selected" target="_self" href="#">Ru</a></li>
+        <li class="header__list-el"><a class="header__lang-link" target="_self" href="#">En</a></li>
       </ul>
   </header>
   <main class="content">
@@ -127,12 +127,8 @@
     </section>
     <section class="cover">
       <a class="cover__link" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-        <div class="cover__background">
-          <div class="cover__text-box">
-            <h2 class="cover__title">До Байкала &laquo;на собаках&raquo;</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы до Байкала на электричках.</p>
-          </div>
-        </div>
+        <h2 class="cover__title">До Байкала &laquo;на собаках&raquo;</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы до Байкала на электричках.</p>
       </a>
     </section>
   </main>
